Fixed Codesmells found by Sonarcloud

--- a/src/MannsBlog/Views/Shared/_Layout.cshtml
+++ b/src/MannsBlog/Views/Shared/_Layout.cshtml
@@ -99,10 +99,10 @@ SOFTWARE.
 
     <!-- Dublin Core Tags -->
     <meta name="DC.Publisher" content="@name" />
-    <meta name="DC.Language" scheme="UTF-8" content="de-DE" />
+    <meta name="DC.Language" content="de-DE" />
     <meta name="DC.Creator" content="@ViewBag.Title" />
-    <meta name="DC.Type" scheme="DCMIType" content="Text" />
-    <meta name="DC.Format" scheme="IMT" content="text/html" />
+    <meta name="DC.Type" content="Text" />
+    <meta name="DC.Format" content="text/html" />
     <meta name="DC.Format.MIME" content="text/html" />
     <meta name="DC.Format.SysReq" content="Internet browser" />
     <meta name="DC.Source" content="@url">
@@ -419,7 +419,6 @@ SOFTWARE.
         <script src="~/lib/codersrank/summary/codersrank-summary.js"></script>
         <script src="~/lib/codersrank/work-experience/codersrank-work-experience.js"></script>
         <script src="~/js/clean-blog.js"></script>
-        <script src="~/js/audio.js"></script>
         <script src="~/js/@typeittargetdev"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
@@ -440,7 +439,6 @@ SOFTWARE.
         <script src="~/lib/codersrank/summary/codersrank-summary.min.js"></script>
         <script src="~/lib/codersrank/work-experience/codersrank-work-experience.min.js"></script>
         <script src="~/js/clean-blog.min.js"></script>
-        <script src="~/js/audio.min.js"></script>
         <script src="~/js/@typeittargetprod"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
 
