--- a/src/MannsBlog/Views/Shared/_Sidebar.cshtml
+++ b/src/MannsBlog/Views/Shared/_Sidebar.cshtml
@@ -234,6 +234,6 @@ SOFTWARE.
 <div id="codeproject">
     <h3 style="text-align: center;">Codeproject</h3>
     <div class="center-align">
-        <p><iframe frameborder="true" height="180" scrolling="no" src="https://www.codeproject.com/members/flair/11834143" width="220" title="Codeproject Badge"></iframe></p>
+        <p><iframe height="180" src="https://www.codeproject.com/members/flair/11834143" width="220" title="Codeproject Badge"></iframe></p>
     </div>
 </div>
