--- a/src/MannsBlog/Views/Root/Contact.cshtml
+++ b/src/MannsBlog/Views/Root/Contact.cshtml
@@ -67,7 +67,7 @@ SOFTWARE.
 }
 
 <form method="post" enctype="multipart/form-data">
-    <table border="0" cellpadding="0" cellspacing="0">
+    <table border="0">
         <caption>Contact form</caption>
         <tr>
             <td style="width: 80px">Name:</td>
@@ -82,7 +82,7 @@ SOFTWARE.
             <td><input type="text" name="Email" /></td>
         </tr>
         <tr>
-            <td valign="top">Body:</td>
+            <td @*valign="top"*@>Body:</td>
             <td><textarea cols="20" rows="10" name="Body"></textarea></td>
         </tr>
         <tr>
